# dorothy

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
data/: README.md
data/raw/: DEPRECATED.md
docs/: line_spread_functions.md  super_catalogue.md
dorothy/: __init__.py
dorothy/analysis/: __init__.py  knn_anomaly.py  saliency.py
dorothy/cli/: __init__.py  main.py
dorothy/config/: __init__.py  schema.py
dorothy/data/: __init__.py  augmentation.py  catalogue_loader.py  fits_loader.py  gaia_crossmatch.py  normalizer.py
dorothy/inference/: __init__.py  evaluation_utils.py  evaluator.py  predictor.py
dorothy/losses/: __init__.py  heteroscedastic.py
dorothy/models/: __init__.py  mlp.py  multi_head_mlp.py  utils.py
dorothy/training/: __init__.py  trainer.py
dorothy/visualization/: __init__.py  training_plots.py
examples/: ablation_saliency_example.py  advanced_training.yaml  basic_training.yaml  boss_training.yaml  saliency_example.py  variant1_boss_apogee.yaml  variant2_multi_survey.yaml  variant3_multi_labelset.yaml  variant4_all_surveys.yaml  variant5_all_surveys_masked.yaml
scripts/: add_boss_to_hdf5.py  add_gaia_ids_to_hdf5.py  add_lamost_lrs_to_hdf5.py  add_lamost_mrs_to_hdf5.py  build_catalogue.py  build_catalogue_v2.py  catalogue_config.yaml  create_deduplicated_catalogue.py  fix_wavelengths.py  organize_data.py  test_variants.py
scripts/legacy/: README.md  add_desi_to_hdf5.py  add_lamost_mrs_to_hdf5.py  fix_wavelengths.py
tests/: __init__.py  conftest.py  test_augmentation.py  test_catalogue_loader.py  test_cli.py  test_config.py  test_evaluator.py  test_fits_loader.py  test_integration.py  test_knn_anomaly.py  test_losses.py  test_masking_performance.py  test_models.py  test_multi_head_mlp.py  test_normalizer.py  test_predictor.py  test_saliency.py  test_trainer.py  test_visualization.py
